added content component

--- a/swiftransact/src/style.scss
+++ b/swiftransact/src/style.scss
@@ -11,7 +11,6 @@ body {
     max-width: 100%;
     margin: 0 auto;
     min-height: 100vh;
-    border: 2px solid red;
 
     .nav {
       background: #ffffff;
@@ -20,6 +19,8 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      position: sticky;
+      top: 0;
 
       .nav-list {
         ul {
@@ -60,7 +61,7 @@ body {
 
     .footer {
       display: flex;
-      padding: 2rem 2rem 0 2rem;
+      padding: 2rem 0rem 2rem 2rem;
       height: 70vh;
 
       p {
@@ -167,6 +168,58 @@ body {
               background: #ffffff;
               color: #dd8941;
             }
+          }
+        }
+      }
+    }
+
+    .content {
+      display: flex;
+      padding: 6rem 2rem;
+      justify-content: space-between;
+
+      .contentText {
+        width: 30vw;
+        h4 {
+          font-size: 1.2rem;
+          color: #dca87c;
+          font-weight: 500;
+        }
+
+        h2 {
+          font-weight: 600;
+          color: #233142;
+          font-size: 3rem;
+        }
+
+        h6 {
+          font-size: 1.2rem;
+          line-height: 1.5rem;
+          font-weight: 400;
+          color: #dca87c;
+        }
+
+        .contentBtn {
+          background: #dd8941;
+          border-radius: 50px;
+          padding: 0.5rem 0.5rem 0.5rem 1rem;
+          border: none;
+          outline: none;
+          color: #101010;
+          font-weight: 600;
+          cursor: pointer;
+          color: #ffffff;
+          font-size: 1rem;
+          font-weight: 400;
+
+          &:hover {
+            background: orange;
+            transition: all 0.5s ease;
+          }
+
+          i {
+            margin-left: 0.5rem;
+            font-size: larger;
           }
         }
       }
