--- a/swiftransact/src/style.scss
+++ b/swiftransact/src/style.scss
@@ -196,7 +196,7 @@ body {
           font-size: 1.2rem;
           line-height: 1.5rem;
           font-weight: 400;
-          color: #dca87c;
+          color: #233142;
         }
 
         .contentBtn {
